// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox checked 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-kn3wr0=""
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <div
        aria-checked={true}
        data-css-18kl1pt=""
        role="checkbox"
        tabIndex="0"
      >
        <div
          className="css-12f5sv2"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <input
        checked={true}
        data-css-gyrv08=""
        name="colorRed"
        readOnly={true}
        tabIndex="-1"
        type="checkbox"
        value="red"
      />
      <div
        data-css-pgc406=""
      >
        Red
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-kn3wr0=""
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <div
        aria-checked={false}
        data-css-yu3qnt=""
        role="checkbox"
        tabIndex="0"
      />
      <input
        checked={false}
        data-css-gyrv08=""
        name="colorRed"
        readOnly={true}
        tabIndex="-1"
        type="checkbox"
        value="red"
      />
      <div
        data-css-pgc406=""
      >
        Red
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox disabled 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1gz58lp=""
      onClick={null}
      onKeyDown={null}
    >
      <div
        aria-checked={false}
        data-css-1372o4l=""
        role="checkbox"
        tabIndex="-1"
      />
      <input
        checked={false}
        data-css-gyrv08=""
        name="colorRed"
        readOnly={true}
        tabIndex="-1"
        type="checkbox"
        value="red"
      />
      <div
        data-css-pgc406=""
      >
        Red
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox error 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div>
      <label
        data-css-kn3wr0=""
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-checked={true}
          data-css-dtfr83=""
          role="checkbox"
          tabIndex="0"
        >
          <div
            className="css-12f5sv2"
          >
            <svg
              aria-label="check icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
              />
            </svg>
          </div>
        </div>
        <input
          checked={true}
          data-css-gyrv08=""
          name="colorRed"
          readOnly={true}
          tabIndex="-1"
          type="checkbox"
          value="red"
        />
        <div
          data-css-pgc406=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-checked={false}
          data-css-yobc34=""
          role="checkbox"
          tabIndex="0"
        />
        <input
          checked={false}
          data-css-gyrv08=""
          name="colorRed"
          readOnly={true}
          tabIndex="-1"
          type="checkbox"
          value="red"
        />
        <div
          data-css-pgc406=""
        >
          Red
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox state demo 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "color": "#555555",
          }
        }
      >
        Checked:
         
        
      </div>
      <label
        data-css-kn3wr0=""
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-checked={false}
          data-css-yu3qnt=""
          role="checkbox"
          tabIndex="0"
        />
        <input
          checked={false}
          data-css-gyrv08=""
          name="colorRed"
          onCheck={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="checkbox"
          value="red"
        />
        <div
          data-css-pgc406=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-checked={false}
          data-css-yu3qnt=""
          role="checkbox"
          tabIndex="0"
        />
        <input
          checked={false}
          data-css-gyrv08=""
          name="colorGreen"
          onCheck={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="checkbox"
          value="green"
        />
        <div
          data-css-pgc406=""
        >
          Green
        </div>
      </label>
      <label
        data-css-kn3wr0=""
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-checked={false}
          data-css-yu3qnt=""
          role="checkbox"
          tabIndex="0"
        />
        <input
          checked={false}
          data-css-gyrv08=""
          name="colorBlue"
          onCheck={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="checkbox"
          value="blue"
        />
        <div
          data-css-pgc406=""
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;
